# health_orchestrator

./: README.md  health_orchestrator.db  pyproject.toml  schema.sql
app/api/: session.py
app/cli/: main.py
app/core/: config.py  db.py  versioning.py
app/graph/: hitl_nodes.py  innovation_subgraph.py  nodes.py  orchestrator.py
app/middleware/: auth.py  base.py  engine.py  policy.py  redaction.py  risk.py  tool_wrapper.py  validation.py
app/middleware/__pycache__/models/: state_models.py
app/services/: approvals.py  event_logger.py  run_registry.py  tool_ledger.py
app/static/: styles.css
app/templates/: appointment.html  approvals.html  audit.html  base.html  dashboard.html  innovation.html  run_detail.html  session.html
app/web/: app.py  routes.py  server.py
